src/pursuit/log/build_2022-12-19_21-33-04/pursuit/stdout_stderr.log
running egg_info
creating build/pursuit/pursuit.egg-info
writing build/pursuit/pursuit.egg-info/PKG-INFO
writing dependency_links to build/pursuit/pursuit.egg-info/dependency_links.txt
writing entry points to build/pursuit/pursuit.egg-info/entry_points.txt
writing requirements to build/pursuit/pursuit.egg-info/requires.txt
writing top-level names to build/pursuit/pursuit.egg-info/top_level.txt
writing manifest file 'build/pursuit/pursuit.egg-info/SOURCES.txt'
reading manifest file 'build/pursuit/pursuit.egg-info/SOURCES.txt'
writing manifest file 'build/pursuit/pursuit.egg-info/SOURCES.txt'
running build
running build_py
creating /home/jjaffe27/dev_f1tenth_ws/src/pursuit/build/pursuit/build
creating /home/jjaffe27/dev_f1tenth_ws/src/pursuit/build/pursuit/build/lib
creating /home/jjaffe27/dev_f1tenth_ws/src/pursuit/build/pursuit/build/lib/pursuit
copying pursuit/__init__.py -> /home/jjaffe27/dev_f1tenth_ws/src/pursuit/build/pursuit/build/lib/pursuit
copying pursuit/pure_pursuit.py -> /home/jjaffe27/dev_f1tenth_ws/src/pursuit/build/pursuit/build/lib/pursuit
running install
running install_lib
creating /home/jjaffe27/dev_f1tenth_ws/src/pursuit/install/pursuit/lib/python3.8/site-packages/pursuit
copying /home/jjaffe27/dev_f1tenth_ws/src/pursuit/build/pursuit/build/lib/pursuit/__init__.py -> /home/jjaffe27/dev_f1tenth_ws/src/pursuit/install/pursuit/lib/python3.8/site-packages/pursuit
copying /home/jjaffe27/dev_f1tenth_ws/src/pursuit/build/pursuit/build/lib/pursuit/pure_pursuit.py -> /home/jjaffe27/dev_f1tenth_ws/src/pursuit/install/pursuit/lib/python3.8/site-packages/pursuit
byte-compiling /home/jjaffe27/dev_f1tenth_ws/src/pursuit/install/pursuit/lib/python3.8/site-packages/pursuit/__init__.py to __init__.cpython-38.pyc
byte-compiling /home/jjaffe27/dev_f1tenth_ws/src/pursuit/install/pursuit/lib/python3.8/site-packages/pursuit/pure_pursuit.py to pure_pursuit.cpython-38.pyc
  File "/home/jjaffe27/dev_f1tenth_ws/src/pursuit/install/pursuit/lib/python3.8/site-packages/pursuit/pure_pursuit.py", line 18
    for line in f.readlines()
                            ^
SyntaxError: invalid syntax

running install_data
creating /home/jjaffe27/dev_f1tenth_ws/src/pursuit/install/pursuit/share/ament_index
creating /home/jjaffe27/dev_f1tenth_ws/src/pursuit/install/pursuit/share/ament_index/resource_index
creating /home/jjaffe27/dev_f1tenth_ws/src/pursuit/install/pursuit/share/ament_index/resource_index/packages
copying resource/pursuit -> /home/jjaffe27/dev_f1tenth_ws/src/pursuit/install/pursuit/share/ament_index/resource_index/packages
copying package.xml -> /home/jjaffe27/dev_f1tenth_ws/src/pursuit/install/pursuit/share/pursuit
running install_egg_info
Copying build/pursuit/pursuit.egg-info to /home/jjaffe27/dev_f1tenth_ws/src/pursuit/install/pursuit/lib/python3.8/site-packages/pursuit-0.0.0-py3.8.egg-info
running install_scripts
Installing pure_pursuit script to /home/jjaffe27/dev_f1tenth_ws/src/pursuit/install/pursuit/lib/pursuit
writing list of installed files to '/home/jjaffe27/dev_f1tenth_ws/src/pursuit/build/pursuit/install.log'
